--- a/CrowdFunding/home/templates/home/searchResults.html
+++ b/CrowdFunding/home/templates/home/searchResults.html
@@ -1,18 +1,57 @@
+
+
 {% extends "home/base.html" %}
 {% load bootstrap4 %}
 {% block content %}
-{% if results %}
-{% for one in results %}
-<div class="card">
+{%  if  results  or  resultss %}
 
+{%  for one in  results  %}
+<div class="card">
   <div class="card-body">
-    <h4 class="card-title">{{ one.title }}</h4>
+        <h4 class="card-title">{{ one.title }}</h4>
     <p class="card-text">{{ one.details }}</p>
     <a href="{% url 'viewProject' one.id %}" class="btn btn-primary">view</a>
   </div>
 </div>
 {% endfor %}
+
+{%  for one in resultss  %}
+
+
+{%  if one.project  in results   %}
+
 {% else %}
-<h2 style="color: brown"><span style="color: darkblue">{{ yoursearch }}</span> not found ya prence </h2>
+
+<div class="card">
+
+  <div class="card-body">
+        <h4 class="card-title"> title => {{ one.project.title }}</h4>
+              <h4 class="card-title">tag => {{ one.tag }}</h4>
+
+    <p class="card-text">{{ one.project.details }}</p>
+    <a href="{% url 'viewProject' one.id %}" class="btn btn-primary">view</a>
+  </div>
+</div>
+
 {% endif %}
+
+
+{% endfor %}
+
+
+{% else %}
+<h2 style="color: brown"><span style="color: darkblue" >{{ yoursearch }}</span> not found ya prence </h2>
+{% endif %}
+
+
 {% endblock %}
+
+
+
+
+
+
+
+
+
+
