--- a/CrowdFunding/projects/templates/projects/my_projects.html
+++ b/CrowdFunding/projects/templates/projects/my_projects.html
@@ -29,7 +29,7 @@
                 <th>details</th>
                 <th>category</th>
                 <th>total target</th>
-                <th>Show</th>
+                <th>actions</th>
             </tr>
         </thead>
         <tbody>
