--- a/CrowdFunding/projects/templates/projects/view.html
+++ b/CrowdFunding/projects/templates/projects/view.html
@@ -2,46 +2,23 @@
 {% load bootstrap4 %}
 {% load static %}
 {% block is_authenticated %}
-
-<div class="container">
-    <style>
-        .checked {
-            color: orange;
-        }
-
-        .my_btn {
-            background-color: inherit !important;
-            border: 0 !important;
-
-        }
-    </style>
-
-
-    <div>
-        <link rel="stylesheet"
-            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
-            integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-
-        <!-- Latest compiled and minified CSS -->
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
-            integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-        <div class="container mt-2">
-            <a href="{% url 'projects' %}" class="btn btn-primary mb-2">Back</a>
-            <div class="row">
-
-                <div class="col-6 ">
-                    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-                        <ol class="carousel-indicators">
-                            {% for image in images %}
-                            <li data-target="#carouselExampleIndicators" data-slide-to="{{ forloop.counter0 }}"
-                                class="{% if forloop.counter0 == 0  %} active {%endif%}"></li>
-                            {% endfor %}
-                        </ol>
-                        <div class="carousel-inner">
-                            {% for image in images %}
-                            <div class="carousel-item {% if forloop.counter0 == 0  %} active {%endif%}">
-                                <img src="/media/{{image.image}}" class="img-fluid" alt="">
+<div class="container mt-2">
+    <a href="{% url 'projects' %}" class="btn btn-primary mb-2">Back</a>
+    <div class="row">
+        <div class="col-6 ">
+            <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                <ol class="carousel-indicators">
+                    {% for image in images %}
+                        <li data-target="#carouselExampleIndicators" data-slide-to="{{ forloop.counter0 }}"
+                            class="{% if forloop.counter0 == 0  %} active {%endif%}"></li>
+                    {% endfor %}
+                </ol>
+                <div class="carousel-inner">
+                        {% for image in images %}
+                        <div class="carousel-item {% if forloop.counter0 == 0  %} active {%endif%}">
+                            <img style="height: 350px;
+                            max-height: 100%;
+                            width: 100vw;" src="/media/{{image.image}}" class="img-fluid" alt="">
                             </div>
                             {% endfor %}
                         </div>
@@ -58,11 +35,13 @@
                     </div>
                 </div>
                 <div class="col-md-6 col-12">
-                    <h3>Title | {{project.title}}</h3>
-                    <h3>Details | {{project.details}}</h3>
-                    <h3>category | {{category.name}}</h3>
-                    <h3>Total Target | {{project.total_target}}</h3>
-                    <h3>Total Donate | {{project.total_donate}}</h3>
+                    <h3>Title | <span style="font-size: 0.8em;">{{project.title}}</span></h3>
+                    <h3>Details | <span style="font-size: 0.8em;">{{project.details}}</span></h3>
+                    <h3>category | <span style="font-size: 0.8rem;">{{category.name}}</span></h3>
+                    <h3>Total Target | <span style="font-size: 0.8em;">{{project.total_target}}</span></h3>
+                    <h3>Total Donate | <span style="font-size: 0.8em;">
+                        {{project.total_donate}}
+                    </span></h3>
 
                     <h3>Tags | {% for tag in tags %} {{tag.tag}} {% endfor %}</h3>
                     <h3>Rate |
@@ -103,7 +82,7 @@
 
 
                 </div>
-                <div style="margin-left:5%;">
+                <div class="mt-3" style="margin-left:5%;">
 
                     <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#exampleModall">
                         Report
@@ -111,7 +90,7 @@
 
 
 
-                    <button id="second" type="button" class="  col-1 col-md-1 btn btn-success" data-toggle="modal"
+                    <button id="second" type="button" class="btn btn-success" data-toggle="modal"
                         data-target="#exampleModal">Donate </button>
 
 
@@ -142,19 +121,27 @@
 
             </div>
         </div>
-    </div>
+<!-- </div> -->
 
 
     <!--  -->
-    <div class="my-2">
-
-        <a class="btn btn-success mb-2 float-right" href="{% url 'new_comment' project.id %}"><svg
+    <div class="container  my-2">
+        <form method="POST" novalidate class="float-right d-flex justify-content-center align-items-center">
+            {% csrf_token %}
+            {% bootstrap_form form %} 
+            <button type="submit" class=" ml-4 mt-3 btn btn-success">
+                <svg
                 xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-circle"
                 viewBox="0 0 16 16">
                 <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z" />
                 <path
                     d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z" />
-            </svg></a>
+            </svg>
+            </button>
+    
+        </form>
+
+        
 
 
 
@@ -181,10 +168,19 @@
 
                 <td>
                     {% if comm.user_id_id == current_user.id %}
+                        
 
-
-                    <a class="btn btn-primary" href="{% url 'delete_comment' project.id  comm.id%}">Delete</a>
-                    <a class="btn btn-warning" href=" {% url 'edit_comment' project.id comm.id %}">Edit</a>
+                    <a class="btn btn-danger" href="{% url 'delete_comment' project.id  comm.id%}">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash" viewBox="0 0 16 16">
+                            <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6z"/>
+                            <path fill-rule="evenodd" d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118zM2.5 3V2h11v1h-11z"/>
+                        </svg>
+                    </a>
+                    <a class="btn btn-success" href=" {% url 'edit_comment' project.id comm.id %}">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil" viewBox="0 0 16 16">
+                            <path d="M12.146.146a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1 0 .708l-10 10a.5.5 0 0 1-.168.11l-5 2a.5.5 0 0 1-.65-.65l2-5a.5.5 0 0 1 .11-.168l10-10zM11.207 2.5 13.5 4.793 14.793 3.5 12.5 1.207 11.207 2.5zm1.586 3L10.5 3.207 4 9.707V10h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.293l6.5-6.5zm-9.761 5.175-.106.106-1.528 3.821 3.821-1.528.106-.106A.5.5 0 0 1 5 12.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.468-.325z"/>
+                        </svg>
+                    </a>
 
 
                     {% else %}
@@ -240,33 +236,27 @@
         </table>
 
     </div>
-
-    <div class="row">
-        <h2>
+    <div class="container my-2">
+        <h2 class="mb-4">
             Related Projects
         </h2>
-        {% for images in related_projects_images %}
-        <div class="col-md-3 col-12">
-            <div class="card">
-                <img class="card-img-top" src="/media/{{images.image}}" alt="Card image cap">
-                <div class="card-body">
-                    <h5 class="card-title">{{images.project.title}}</h5>
-                    <p class="card-text">{{images.project.details}}</p>
-                    <a href="{% url 'viewProject' images.project_id %}" class="btn btn-link">View Project</a>
+        <div class="row">
+        
+            {% for images in related_projects_images %}
+            <div class="col-md-3 col-12">
+                <div class="card" style="height: 318px;">
+                    <img style="max-height: 140px; height: 140px;" class="card-img-top" src="/media/{{images.image}}" alt="Card image cap">
+                    <div class="card-body">
+                        <h5 class="card-title">{{images.project.title}}</h5>
+                        <p class="card-text">{{images.project.details|slice:50}}...</p>
+                        <a href="{% url 'viewProject' images.project_id %}" class="btn btn-link">View Project</a>
+                    </div>
+    
                 </div>
-
             </div>
+            {% endfor %}
         </div>
-        {% endfor %}
     </div>
-
-
-    <form method="POST" novalidate style="margin-left: 15%;display: inline-block;">
-        {% csrf_token %}
-        {{form.as_p}}
-        <button type="submit" class="btn btn-success">Add</button>
-
-    </form>
 </div>
 <!--/**********************************************************************-->
 
