--- a/CrowdFunding/home/templates/category/show.html
+++ b/CrowdFunding/home/templates/category/show.html
@@ -3,27 +3,66 @@
 {% load bootstrap4 %}
 
 
+
+
 {% block is_authenticated %}
-<a href="{% url 'new_category' %}" class="btn btn-primary mt-3">Add New category</a>
-<table class="table " style="border: 1px solid;">
-    <thead class="thead-dark ">
+{%if request.user.is_admin == 1 %}
+
+<div class="container">
+    <a href="{% url 'new_category' %}" class="btn btn-success mt-3 mb-1 ">Add New category</a> 
+    <table class="table text-center" style="border: 1px solid;">
+        <thead class="thead-dark ">
+            <tr>
+                <th>Title</th>
+                <th>Created Date</th>
+                <th>Action</th>
+            </tr>
+        </thead>
+    
         <tr>
-            <th>category</th>
-            <th>Create_dt</th>
-            <th>action</th>
+            {% for cat in category %}
+            <td> {{ cat.name }} </td>
+            <td> {{cat.Create_db}}</td>
+            <td><a href="{% url 'delete_category' cat.id  %}" class="btn btn-danger">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash" viewBox="0 0 16 16">
+                        <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6z"/>
+                        <path fill-rule="evenodd" d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118zM2.5 3V2h11v1h-11z"/>
+                    </svg>
+                </a>
+            </td>
+    
         </tr>
-    </thead>
+        {%endfor%}
+    
+    </table>
+    </div>
+{%else%}
 
-    <tr>
-        {% for cat in category %}
 
-        <td> {{ cat.name }} </td>
-        <td> {{cat.Create_db}}</td>
-        <td><a href="{% url 'delete_category' cat.id  %}" class="btn btn-danger">Delete</a></td>
 
-    </tr>
-    {%endfor%}
+<div class="container">
+    <h1 class="text-center logo my-4">
+    
+    </h1>
+    <div class="row justify-content-center">
+      <div class="col-lg-8 col-md-10 col-sm-12">
+        <div class="card">
+          <div class="card-body">
+            <h3 class="card-title row justify-content-center">You Aren't Authenticated to view this Page</h3>
 
-</table>
+              
+          
+          </div>
+          <div class="card-footer text-muted text-center">
+            Back to <a href="{% url 'index' %}">Home</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 
+{%endif%}
 {% endblock %}
+
+
+
