--- a/CrowdFunding/home/templates/home/searchResults.html
+++ b/CrowdFunding/home/templates/home/searchResults.html
@@ -2,15 +2,21 @@
 
 {% extends "home/base.html" %}
 {% load bootstrap4 %}
-{% block content %}
+{% block is_authenticated %}
 {%  if  results  or  resultss %}
 
+
+<div class="container mt-5">
+<a  class="btn btn-success mb-1" href="{% url 'index' %}">  Back to Home</a>
 {%  for one in  results  %}
-<div class="card">
+<div class="card mt-1 text-center">
   <div class="card-body">
-        <h4 class="card-title">{{ one.title }}</h4>
-    <p class="card-text">{{ one.details }}</p>
-    <a href="{% url 'viewProject' one.id %}" class="btn btn-primary">view</a>
+       
+        <div class="card-header text-center">
+          <h3 class="card-title row justify-content-center">{{ one.title }}</h3>
+        </div>
+    <p class="card-text m-3 ">{{ one.details }}</p>
+    <a href="{% url 'viewProject' one.id %}" class="btn btn-primary btn-block">view</a>
   </div>
 </div>
 {% endfor %}
@@ -22,14 +28,16 @@
 
 {% else %}
 
-<div class="card">
+<div class="card mt-1 text-center">
 
   <div class="card-body">
-        <h4 class="card-title"> title => {{ one.project.title }}</h4>
-              <h4 class="card-title">tag => {{ one.tag }}</h4>
+    <div class="card-header text-center">
+      <h3 class="card-title row justify-content-center">{{ one.title }}</h3>
+    </div>
+              <h4 class="card-title m-3 ">tag => {{ one.tag }}</h4>
 
     <p class="card-text">{{ one.project.details }}</p>
-    <a href="{% url 'viewProject' one.id %}" class="btn btn-primary">view</a>
+    <a href="{% url 'viewProject' one.id %}" class="btn btn-primary btn-block">view</a>
   </div>
 </div>
 
@@ -43,7 +51,7 @@
 <h2 style="color: brown"><span style="color: darkblue" >{{ yoursearch }}</span> not found ya prence </h2>
 {% endif %}
 
-
+</div>
 {% endblock %}
 
 
