--- a/CrowdFunding/pusers/templates/pusers/user_nav.html
+++ b/CrowdFunding/pusers/templates/pusers/user_nav.html
@@ -24,10 +24,12 @@
 
             {%if request.user.is_admin == 1 %}
             <li class="nav-item active">
-                <a class="nav-link" href="admin/"> Admin Panel <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="/show"> Categories<span class="sr-only">(current)</span></a>
             </li>
+            <li class="nav-item active">
+                <a class="nav-link" href="/admin"> Admin Panel <span class="sr-only">(current)</span></a>
+            </li>          
             {%endif%}
-
         </ul>
 
         {%if request.user.is_authenticated%}
