--- a/CrowdFunding/home/templates/home/index.html
+++ b/CrowdFunding/home/templates/home/index.html
@@ -125,202 +125,251 @@
 
 {% block is_authenticated %}
 
-<div class="container text-center">
 
 
-        <div class="container row" >
-        <div class="w-1 p-3 col-xs-6" >
-            <form method="post" action="{% url 'searchName'  %}" style="margin: 0">
-                    {% csrf_token %}
-                    <div class="input-group">
-                        <div class="form-outline">
-                            <input id="search_name" type="search" id="form1" name="search_name" class="form-control" />
+    <div class=" row col-md-12 w-100 justify-content-center " >
+       
+            <div class=" p-3 col-md-7" style="left: 40%;">
+                <form method="post" action="{% url 'searchName'  %}" >
+                        {% csrf_token %}
+                        <div class="input-group">
+                            <div class="form-outline " style="width: 50%;">
+                                <input id="search_name" type="search" id="form1" name="search_name" class="form-control" placeholder="Search by Title or Tag"/>
+                            </div>
+                            <button id="searchTag_submit" type="submit" class="btn btn-outline-primary ml-2"">search</button>
+
                         </div>
-                        <button id="searchTag_submit" type="submit" class="btn btn-outline-primary">search</button>
-
-                    </div>
                 </form>
             </div>
-            
-        </div>
-
-        <!---->
-
-
-
-
-        <div class="row"></div>
-            <h4 >selected by admin</h4>
-            <div class="row ">
-                <div id="carouselExampleIndicatorsss" class="carousel slide" data-ride="carousel"  style="margin: auto;">
-                    <ol class="carousel-indicators">
-                    {% for imgadmin in imagesadmin%}
-                    <li data-target="#carouselExampleIndicatorsss" data-slide-to="{{ forloop.counter0 }}" class="{% if forloop.counter0 == 0  %} active {%endif%}"></li>
-                    {% endfor %}
-
-                    </ol>
-
-
-                    <div class="carousel-inner">
-                        {% for imgadmin in imagesadmin%}
-                        <div class="carousel-item {% if forloop.counter0 == 0  %} active {%endif%}">
-                            <img src="/media/{{imgadmin.image}}" class="img-fluid"  alt="">
-
-                            <div class="carousel-caption d-none d-md-block">
-                                <h5>{{imgadmin.project.title}}</h5>
-                                <a class="btn btn-primary" href="{% url 'viewProject' imgadmin.project.id %}">show details</a>
-                        </div>
-                        </div>
-                    {% endfor %}
-                    </div>
-
-
-
-                    <a class="carousel-control-prev" href="#carouselExampleIndicatorsss" role="button" data-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Previous</span>
-                    </a>
-                    <a class="carousel-control-next" href="#carouselExampleIndicatorsss" role="button" data-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Next</span>
-                    </a>
-                </div>
-        </div>
-
-        <!---->
-
-
-        <div class="row "></div>
-            <h4>highest score projects</h4>
-
-            <div class="row ">
-                <div id="carouselExampleIndicatorss" class="carousel slide" data-ride="carousel"  style="margin: auto;">
-                    <ol class="carousel-indicators">
-                    {% for imagerate in imagesrate%}
-                    <li data-target="#carouselExampleIndicatorss" data-slide-to="{{ forloop.counter0 }}" class="{% if forloop.counter0 == 0  %} active {%endif%}"></li>
-                    {% endfor %}
-
-                    </ol>
-
-
-                    <div class="carousel-inner">
-                        {% for imagerate in imagesrate%}
-                        <div class="carousel-item {% if forloop.counter0 == 0  %} active {%endif%}">
-                            <img src="/media/{{imagerate.image}}" class="img-fluid"  alt="">
-
-                            <div class="carousel-caption d-none d-md-block">
-                                <h5>{{imagerate.project.title}}</h5>
-                                <a class="btn btn-primary" href="{% url 'viewProject' imagerate.project.id %}">show details</a>
-                        </div>
-                        </div>
-                    {% endfor %}
-                    </div>
-
-
-
-                    <a class="carousel-control-prev" href="#carouselExampleIndicatorss" role="button" data-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Previous</span>
-                    </a>
-                    <a class="carousel-control-next" href="#carouselExampleIndicatorss" role="button" data-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Next</span>
-                    </a>
-                </div>
-            </div>
+       
+    </div>
 
 
 
 
 
 
+
+
+
+
+
+
+
+
+
+    
+    
+
+        
+
+        
+
+        
+         
+
+
+    
+
+
+    
 
 
             <div class="row col-md-12 p-4">
 
                 <div class="row col-md-3 ">
                     <div class="list-group col-md-12">
-                        <a  class="list-group-item list-group-item-action  list-group-item-dark active">
-                        Project Categories
-                        </a>
-                        {% for cat in all_category %}
-                        <a href="#" class="list-group-item list-group-item-action"> {{ cat.name }} </a>
-                        {%endfor%}
-                    </div>
+                        <button type="button" class="list-group-item list-group-item-action active">
+                            Project Categories
+                        </button>
+                        <form class="rate-form" action="{% url 'index' %}" method="POST" id={{cat.id}}>
+                            {% for cat in all_category %}
+                            {% csrf_token %}
+                            <button type="submit" class="my_btn list-group-item list-group-item-action" value={{cat.id}} id={{cat.id}}>{{ cat.name }}</button>
+                            {%endfor%}
+                        </form>
+                      </div>
                 </div>
 
         
 
-            <div class="row col-md-1 "></div>
+           
 
-            <div class="row col-md-8 ">
-                <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel"  style="margin: auto;">
-                    <ol class="carousel-indicators">
-                        {% for image in images%}
-                        <li data-target="#carouselExampleIndicators" data-slide-to="{{ forloop.counter0 }}"
-                            class="{% if forloop.counter0 == 0  %} active {%endif%}"></li>
+           
+            <!-- <h4>highest score projects</h4> -->
+
+            <div class="row col-md-9">
+                    <div id="carouselExampleIndicatorss" class="carousel slide" data-ride="carousel"  style="margin: auto;">
+                        <ol class="carousel-indicators">
+                        {% for imagerate in imagesrate%}
+                        <li data-target="#carouselExampleIndicatorss" data-slide-to="{{ forloop.counter0 }}" class="{% if forloop.counter0 == 0  %} active {%endif%}"></li>
                         {% endfor %}
+                        </ol>
+                        <div class="carousel-inner">
+                            {% for imagerate in imagesrate%}
+                            <div class="carousel-item {% if forloop.counter0 == 0  %} active {%endif%}">
+                                <img src="/media/{{imagerate.image}}" class="img-fluid"  alt="">
 
-                    </ol>
-
-
-                    <div class="carousel-inner">
-                        {% for image in images %}
-                        <div class="carousel-item {% if forloop.counter0 == 0  %} active {%endif%}">
-                            <img src="/media/{{image.image}}" class="img-fluid" alt="">
-
-                            <div class="carousel-caption d-none d-md-block">
-                                <h5>{{image.project.title}}</h5>
-                                <a class="btn btn-primary" href="{% url 'viewProject' image.project.id %}">show details</a>
+                                <div class="carousel-caption d-none d-md-block">
+                                    <h5>{{imagerate.project.title}}</h5>
+                                    <a class="btn btn-primary" href="{% url 'viewProject' imagerate.project.id %}">show details</a>
                             </div>
-                        </div>
+                            </div>
                         {% endfor %}
-                    </div>
-
-
-
-                    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                        </div>
+                        <a class="carousel-control-prev" href="#carouselExampleIndicatorss" role="button" data-slide="prev">
                         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                         <span class="sr-only">Previous</span>
-                    </a>
-                    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                        </a>
+                        <a class="carousel-control-next" href="#carouselExampleIndicatorss" role="button" data-slide="next">
                         <span class="carousel-control-next-icon" aria-hidden="true"></span>
                         <span class="sr-only">Next</span>
                     </a>
                 </div>
             </div>
+
+            
+
+          
+
+
+
+
+        </div>
+
+        <!-- end -->
+
+<!--cata-->
+<!-- <div class=" row justify-content-center col-md-12" >
+    <ul class="nav justify-content-center">
+        <li class="nav-item">
+            
+            <form class="rate-form" action="{% url 'index' %}" method="POST" id={{cat.id}}>
+                {% for cat in all_category %}
+                {% csrf_token %}
+                <button type="submit" class="my_btn" value={{cat.id}} id={{cat.id}}>{{ cat.name }}</button>
+                {%endfor%}
+            </form>
+        </li>
+    </ul>
+
+        </div>
+        <br> -->
+        <br><br>
+        <div class=" border border-light text-center">
+            
+            <div class="row col-md-12 justify-content-center" id="confirm-box">
+               
+            </div>
+        </div>
+
+        <br>
+
+<!-- cata -->
+
+
+
+
+
+<div class="row col-md-12 text-center justify-content-center">
+    <h1 class="row col-md-6 justify-content-center">Latest Projects</h1>  <h1 class="row col-md-6 justify-content-center">Admin Selected</h1>
+    <div class="row col-md-6 border-light text-center justify-content-center">
+        
+        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel"  style="margin: auto;">
+            <ol class="carousel-indicators">
+                {% for image in images%}
+                <li data-target="#carouselExampleIndicators" data-slide-to="{{ forloop.counter0 }}"
+                    class="{% if forloop.counter0 == 0  %} active {%endif%}"></li>
+                {% endfor %}
+
+            </ol>
+
+
+            <div class="carousel-inner">
+                {% for image in images %}
+                <div class="carousel-item {% if forloop.counter0 == 0  %} active {%endif%}">
+                    <img src="/media/{{image.image}}" class="img-fluid" alt="">
+
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>{{image.project.title}}</h5>
+                        <a class="btn btn-primary" href="{% url 'viewProject' image.project.id %}">show details</a>
+                    </div>
+                </div>
+                {% endfor %}
             </div>
 
+
+
+            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
+        </div>
+    </div>
+
+
+
+
+    <div class="row col-md-6 border-light text-center">
+       
+       
+            <div id="carouselExampleIndicatorsss" class="carousel slide" data-ride="carousel"  style="margin: auto;">
+                <ol class="carousel-indicators">
+                {% for imgadmin in imagesadmin%}
+                <li data-target="#carouselExampleIndicatorsss" data-slide-to="{{ forloop.counter0 }}" class="{% if forloop.counter0 == 0  %} active {%endif%}"></li>
+                {% endfor %}
+
+                </ol>
+
+
+                <div class="carousel-inner">
+                    {% for imgadmin in imagesadmin%}
+                    <div class="carousel-item {% if forloop.counter0 == 0  %} active {%endif%}">
+                        <img src="/media/{{imgadmin.image}}" class="img-fluid"  alt="">
+
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>{{imgadmin.project.title}}</h5>
+                            <a class="btn btn-primary" href="{% url 'viewProject' imgadmin.project.id %}">show details</a>
+                    </div>
+                    </div>
+                {% endfor %}
+                </div>
+
+
+
+                <a class="carousel-control-prev" href="#carouselExampleIndicatorsss" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleIndicatorsss" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+                </a>
+            </div>
+    </div>
+</div>
+
+        
 
 
          
-
-
-
-            <ul class="nav justify-content-center">
-                <li class="nav-item">
-                    {% for cat in all_category %}
-                    <form class="rate-form" action="{% url 'index' %}" method="POST" id={{cat.id}}>
-                        {% csrf_token %}
-                        <button type="submit" class="my_btn" value={{cat.id}} id={{cat.id}}>{{ cat.name }}</button>
-                        {%endfor%}
-                    </form>
-                </li>
-            </ul>
-
-        </div>
-        <br>
-
-        <div class="container">
-            <div class="row col-md-12 justify-content-center" id="confirm-box">
-
-            </div>
-        </div>
-
-        <br>
         
 
-</div>
+
+    <!---->
+
+
+    
+
+
+        
+        
+
+
 
 
 
@@ -380,6 +429,9 @@
 
                             </div>
                             </div> `
+                        }
+                        if(confirmBox.innerHTML != ''){
+                            confirmBox.innerHTML = '<h1 style="width: 100%">Category Result</h1>' + confirmBox.innerHTML
                         }
                     },
                     error: function (error) {
